--- a/app/src/main/res/layout/activity_actualizar_animales.xml
+++ b/app/src/main/res/layout/activity_actualizar_animales.xml
@@ -18,21 +18,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/tbNombreActualizar"
+        android:id="@+id/tbChipActualizar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Nombre del Animal"
-        android:inputType="text"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/edittext_background"
+        android:ems="10"
+        android:hint="Chip del animal"
+        android:inputType="text"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/olive_green"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <EditText
@@ -51,38 +51,20 @@
         android:textColorHint="@color/olive_green"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbNombreActualizar" />
-
-    <EditText
-        android:id="@+id/tbDescripcionActualizar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Descripción"
-        android:inputType="text"
-        android:background="@drawable/edittext_background"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/olive_green"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbAlimentacionActualizar" />
+        app:layout_constraintTop_toBottomOf="@+id/tbChipActualizar" />
 
     <Button
         android:id="@+id/bActualizar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/aqua_green"
         android:text="ACTUALIZAR"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbDescripcionActualizar" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tbAlimentacionActualizar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
