--- a/app/src/main/res/layout/activity_listado.xml
+++ b/app/src/main/res/layout/activity_listado.xml
@@ -7,25 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".ListadoActivity">
 
-    <EditText
-        android:id="@+id/filtro"
-        android:layout_width="407dp"
-        android:layout_height="47dp"
-        android:layout_marginBottom="28dp"
-        android:ems="10"
-        android:hint="Introduce el nombre del animal"
-        android:inputType="text"
-        android:maxLines="1"
-        app:layout_constraintBottom_toTopOf="@+id/recycler"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="420dp"
         android:layout_height="656dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginBottom="75dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filtro" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
