--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -2,143 +2,136 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fregis"
-    tools:context=".RegistroActivity">
+    android:background="@drawable/imgfondoini"
+    tools:context=".InsertarFormularioAdoptar">
 
     <EditText
         android:id="@+id/tbNombre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="Nombre"
+        android:hint="Indica tu Nombre"
         android:inputType="text"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
         android:padding="10dp"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tbApellidos"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="Apellidos"
+        android:hint="Indica tus Apellidos"
         android:inputType="text"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
         android:padding="10dp"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbNombre" />
 
     <EditText
         android:id="@+id/tbCorreo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="Correo Electronico"
+        android:hint="Indica tu correo electrónico"
         android:inputType="textEmailAddress"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
         android:padding="10dp"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbApellidos" />
 
     <EditText
         android:id="@+id/tbContrasena"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
         android:padding="10dp"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbCorreo" />
 
     <EditText
         android:id="@+id/tbTelefono"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="Telefono"
+        android:hint="Indica tu número de teléfono"
         android:inputType="phone"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
         android:padding="10dp"
-        android:elevation="4dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbContrasena" />
 
     <EditText
         android:id="@+id/tbRolUsuario"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/edittext_background"
         android:ems="10"
         android:hint="Rol"
         android:text="Usuario"
         android:inputType="text"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/black"
         android:padding="10dp"
-        android:elevation="4dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/olive_green"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbTelefono" />
 
     <Button
         android:id="@+id/bRegistrar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/dark_green"
         android:text="REGISTRARSE"
         android:textColor="@color/white"
-        android:backgroundTint="@color/green"
-        android:padding="16dp"
-        android:elevation="6dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbRolUsuario" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
