--- a/app/src/main/res/layout/activity_insertar_animales.xml
+++ b/app/src/main/res/layout/activity_insertar_animales.xml
@@ -43,41 +43,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbNumeroChip" />
 
-    <EditText
-        android:id="@+id/tbRaza"
+    <!-- Spinner for selecting raza -->
+
+    <Spinner
+        android:id="@+id/spinnerRaza"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:hint="Raza del Animal"
-        android:inputType="text"
         android:padding="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tbNombreAnimal" />
 
-    <EditText
-        android:id="@+id/tbAlimentacion"
+    <!-- Spinner for selecting alimentacion -->
+
+    <Spinner
+        android:id="@+id/spinnerAlimentacion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:hint="Alimentacion del Animal"
-        android:inputType="text"
         android:padding="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbRaza" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerRaza" />
 
     <EditText
         android:id="@+id/tbEdadAnimal"
@@ -88,14 +82,14 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="Año Nacimiento"
+        android:hint="Edad del Animal"
         android:inputType="text"
         android:padding="10dp"
         android:textColor="@color/black"
         android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbAlimentacion" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAlimentacion" />
 
     <!-- Placeholder image -->
 
@@ -125,4 +119,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
 
