--- a/app/src/main/res/layout/item_usuario.xml
+++ b/app/src/main/res/layout/item_usuario.xml
@@ -29,22 +29,8 @@
             app:layout_constraintVertical_bias="0.0"
             android:alpha="0.2" />
 
-        <ImageView
-            android:id="@+id/imagenAnimal"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
-            app:layout_constraintStart_toStartOf="@+id/backgroundImage"
-            app:layout_constraintTop_toTopOf="@+id/backgroundImage"
-            app:layout_constraintVertical_bias="0.0"
-            tools:srcCompat="@tools:sample/avatars" />
-
         <TextView
-            android:id="@+id/NombreAnimal"
+            android:id="@+id/nombreUsuario"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -54,75 +40,62 @@
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imagenAnimal"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/RazaAnimal"
+            android:id="@+id/apellidosUsuario"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:text="Raza"
+            android:text="Apellidos"
             android:textColor="@color/dark_green"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imagenAnimal"
-            app:layout_constraintTop_toBottomOf="@id/NombreAnimal" />
-
-        <TextView
-            android:id="@+id/AlimentacionAnimal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:text="Alimentacion"
-            android:textColor="@color/dark_green"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imagenAnimal"
-            app:layout_constraintTop_toBottomOf="@id/RazaAnimal" />
-
-        <TextView
-            android:id="@+id/AnioAnimal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:text="Año"
-            android:textColor="@color/dark_green"
-            android:textSize="16sp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imagenAnimal"
-            app:layout_constraintTop_toBottomOf="@id/AlimentacionAnimal" />
-
-        <TextView
-            android:id="@+id/numeroChip"
-            android:layout_width="315dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="numeroChip"
-            android:textColor="@color/dark_green"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/imagenAnimal"
-            app:layout_constraintTop_toBottomOf="@id/AnioAnimal" />
-
-        <Button
-            android:id="@+id/btnAdoptar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:backgroundTint="@color/teal_700"
-            android:text="Adoptar"
-            android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="@+id/backgroundImage"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imagenAnimal" />
+            app:layout_constraintTop_toBottomOf="@id/nombreUsuario" />
+
+        <TextView
+            android:id="@+id/rol"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="Rol"
+            android:textColor="@color/dark_green"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/apellidosUsuario" />
+
+        <TextView
+            android:id="@+id/telefono"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="Teléfono"
+            android:textColor="@color/dark_green"
+            android:textSize="16sp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rol" />
+
+        <TextView
+            android:id="@+id/correoUsuario"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="Correo"
+            android:textColor="@color/dark_green"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/telefono" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
