--- a/app/src/main/res/layout/activity_actualizar_animales.xml
+++ b/app/src/main/res/layout/activity_actualizar_animales.xml
@@ -17,41 +17,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/tbChipActualizar"
+    <Spinner
+        android:id="@+id/spinnerChipActualizar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/edittext_background"
-        android:ems="10"
-        android:hint="Chip del animal"
-        android:inputType="text"
         android:padding="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/olive_green"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <EditText
-        android:id="@+id/tbAlimentacionActualizar"
+    <Spinner
+        android:id="@+id/spinnerAlimentacionActualizar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Alimentación"
-        android:inputType="text"
         android:background="@drawable/edittext_background"
         android:padding="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/olive_green"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbChipActualizar" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerChipActualizar" />
 
     <Button
         android:id="@+id/bActualizar"
@@ -65,6 +55,6 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tbAlimentacionActualizar" />
+        app:layout_constraintTop_toBottomOf="@+id/spinnerAlimentacionActualizar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
